manifests/ktayl-solution-web/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ktayl-solution-web
  namespace: ktayl-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ktayl.10.0.0.200.nip.io
      secretName: ktayl-web-tls
    - hosts:
        - ktayl.devandre.sbs
      secretName: ktayl-web-tls
  rules:
    - host: ktayl.10.0.0.200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ktayl-solution-web
                port:
                  number: 80
    - host: ktayl.devandre.sbs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ktayl-solution-web
                port:
                  number: 80
